# sysmlv2-ai-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RESUME.md  bootstrap.sh
.cargo/: config.toml
.claude/: settings.json
.engine/: README.md  deliverable-manifest.txt
.engine/contracts/: computed-state.md  critique-policy.toml  reverify.toml
.engine/decisions/: 0001-text-files-are-truth.sysml  0002-schema-governance.sysml  0003-single-api-write-policy.sysml  0004-atomicity.sysml  0005-computed-state-engine.sysml  0006-verification-by-method.sysml  0007-engine-is-reusable-work-tracker.sysml  0008-stpa-yes-hara-asil-no.sysml  0009-modular-workflow-states.sysml  0010-agile-for-solo-plus-ai.sysml  0011-native-metaclass-schema.sysml  0012-verification-option-a.sysml  0013-temporal-model-git-only.sysml  0014-main-only-branch-policy.sysml  0015-materialized-views.sysml  0016-confirmation-signoff-discipline.sysml  0017-critique-2026-06-11-accepted.sysml  0018-model-only-state.sysml  0019-batch-confirmation-gates.sysml  0020-skills-refresh.sysml  0021-spec-retired-contract-aligned.sysml  0022-s6-review-doc-sync.sysml  0023-s7-done-detection-align.sysml  0024-s7-review-doc-sync.sysml  0025-s8-succession-ordering-only.sysml  0026-s8-review-doc-sync.sysml  0027-s9-write-api.sysml  0028-s9-review-doc-sync.sysml  0029-s10-issue-linked-task.sysml  0030-s10-review-doc-sync.sysml  0031-s11-statedef-spike.sysml  0032-s11-occurrence-retype.sysml  0033-s11-review-doc-sync.sysml  0034-cr-versioning.sysml  0035-need-layer-discriminator.sysml  0036-safety-case-views.sysml  0037-authored-by-refs.sysml  0038-sprint-estimation-model.sysml  0039-ceremony-skills.sysml  0040-recurring-task-skill-rule.sysml  (+87 more)
.engine/docs/: sysmlv2-syntax-notes.md  tracking-template.sysml  usage.md
.engine/processes/: agile-workflow.sysml  architectural-critique.sysml  decision-authoring.sysml  definition-of-done.sysml  definition-of-ready.sysml  diagram.sysml  doc-sync.sysml  element-critique.sysml  indicator.sysml  introduction.sysml  issue-resolution.sysml  migration.sysml  render.sysml  report.sysml
.engine/rules/: rules.sysml
.engine/skills/: skills-registry.sysml
.engine/tools/: _kernel.py  _migrate_decisions.py  _test_suspect.py  capture_user.py  kill_stale_kernels.py  out_of_band_check.py  query.py  report.py  triage_reminder.py  whats_next.py
.engine/views/: charter-trace.view.toml  decisions-active-and-superseded.view.toml  decisions.view.toml  issues.view.toml  process-changes.view.toml  processes.view.toml  viewpoint-registry.sysml  viewpoints.view.toml
.githooks/: post-commit  pre-commit
.playwright-mcp/: page-2026-07-15T21-23-44-595Z.yml
.tracking/: README.md  actors.sysml  backlog.sysml  baselines.sysml  critiques.sysml  indicators.sysml  issues.sysml  process-governance.sysml  state.sysml
architecture/: system.sysml
conventions/: conventions.sysml
decisions/: 0001-text-files-are-truth.sysml  0002-conventions-frozen-early.sysml
docs/: workflow-guide.md
keel-cli/: Cargo.toml
keel-cli/assets/: claude-md-template.md  console.html
keel-cli/src/: algo.rs  govern.rs  guards.rs  indexer.rs  json.rs  lib.rs  main.rs  orient.rs  queries.rs  reverify.rs  serve.rs  view.rs  write.rs
keel-cli/tests/: cli_bdd.rs  init_smoke.rs  orient_bdd.rs  write_bdd.rs
keel-cli/tests/features/: cli.feature  write.feature
keel-parser/: Cargo.toml  build.rs
keel-parser/src/: ast.rs  lib.rs  parser.rs  token.rs
keel-parser/tests/: lexer_bdd.rs  lexer_proptest.rs  parse_engine_files.rs  parser_bdd.rs  parser_proptest.rs  registry_proptest.rs  semantic_bdd.rs  spec_compat_bdd.rs
keel-parser/tests/features/: lexer.feature  semantic.feature  spec_compat.feature
processes/: agile-workflow.sysml  definition-of-done.sysml
requirements/: toolkit-requirements.sysml
skills/: skills-registry.sysml
sysmlv2-cli/: Cargo.toml
sysmlv2-cli/assets/: console.html
sysmlv2-cli/src/: algo.rs  govern.rs  guards.rs  indexer.rs  json.rs  lib.rs  main.rs  orient.rs  queries.rs  serve.rs  view.rs  write.rs
sysmlv2-cli/tests/: cli_bdd.rs  orient_bdd.rs  write_bdd.rs
sysmlv2-cli/tests/features/: cli.feature  orient.feature  write.feature
sysmlv2-cli/tests/fixtures/: bad_parse.sysml  clean.sysml
sysmlv2-cli/tests/fixtures/orient/: backlog.sysml  state.sysml
sysmlv2-parser/: Cargo.toml
sysmlv2-parser/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  registry.rs  spec_compat.rs  token.rs
sysmlv2-parser/tests/: lexer_bdd.rs  lexer_proptest.rs  parse_engine_files.rs  parser_bdd.rs  parser_proptest.rs  registry_proptest.rs  semantic_bdd.rs  spec_compat_bdd.rs
sysmlv2-parser/tests/features/: parser.feature
work/: epic-bootstrap.sysml  epic-phase1-foundation.sysml  epic-phase2-api.sysml  epic-phase3-gui.sysml
(+355 files in other folders)
