[workspace]
members = [
    "keel-parser",
    "keel-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["William Weatherholtz <0612@asirobots.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/williamweatherholtz/sysmlv2-ai-toolkit"
rust-version = "1.96"
