[package]
name = "keel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Keel — an AI-complemented, SysML v2-text work-tracking engine with strict, computed discipline (the `keel` CLI)."
readme = "../README.md"
keywords = ["sysml", "mbse", "work-tracking", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "keel"
path = "src/main.rs"

[dependencies]
keel-parser = { path = "../keel-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
include_dir = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "process", "io-util", "time"] }
axum = "0.7"
async-stream = "0.3"
tokio-stream = "0.1"

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "cli_bdd"
harness = false

[[test]]
name = "orient_bdd"
harness = false

[[test]]
name = "write_bdd"
harness = false
