[package]
name = "sysmlv2-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sysmlv2"
path = "src/main.rs"

[dependencies]
sysmlv2-parser = { path = "../sysmlv2-parser" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"

[dev-dependencies]
cucumber = { version = "0.20", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "cli_bdd"
harness = false

[[test]]
name = "orient_bdd"
harness = false

[[test]]
name = "write_bdd"
harness = false
